<resources>
    <string name="app_name">Exide</string>
    <string name="customer_details">Customer Details</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email:</string>
    <string name="building_no">Building No:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="pin_code">Pin Code:</string>
    <string name="add_battery">Add Battery</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="battery_ah">Battery AH</string>
    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>
</resources>
