<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/btAddBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_battery"

        />

    <EditText
        android:id="@+id/etScanResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tooltipText="ddddd"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            />
        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            />
        <TextView
            android:id="@+id/tvBatteryAH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_ah"
            />


    </LinearLayout>

</LinearLayout>

